--- a/EcommerceWeb.Api/appsettings.json
+++ b/EcommerceWeb.Api/appsettings.json
@@ -7,7 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EcommerceWebConnectionString": "Server=BARECHERADOUANE;Database=EcommerceWeb;Trusted_Connection=True;TrustServerCertificate=True"
+    "EcommerceWebConnectionString": "Server=BARECHERADOUANE;Database=EcommerceWeb;Trusted_Connection=True;TrustServerCertificate=True",
+    "EcommerceWebAuthConnectionString": "Server=BARECHERADOUANE;Database=EcommerceWebAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
+
+  },
+
+  "Jwt": {
+    "Key": "radouaneBARECHEFERDJIOUAmila432020",
+    "Issuer": "https://localhost:7015;http://localhost:5141",
+    "Audience": "https://localhost:7015;http://localhost:5141"
 
   }
- }
+
+}
